REGRESSION(r154797): Debugger crashes when stepping over an uncaught exception. <https://webkit.org/b/133182>

Reviewed by Oliver Hunt.


Source/JavaScriptCore:
Before r154797, we used to clear the VM exception before calling into the
debugger.  After r154797, we don't.  This patch will restore this clearing
of the exception before calling into the debugger.

Also added assertions after returning from calls into the debugger to
ensure that the debugger did not introduce any exceptions.

* interpreter/Interpreter.cpp:
(JSC::unwindCallFrame):
(JSC::Interpreter::unwind):
(JSC::Interpreter::debug):
- Fixed the assertion here.  Interpreter::debug() should never be called
  with a pending exception.  Debugger callbacks for exceptions should be
  handled by Interpreter::unwind() and Interpreter::unwindCallFrame().

LayoutTests:
* inspector-protocol/debugger/regress-133182-expected.txt: Added.
* inspector-protocol/debugger/regress-133182.html: Added.



Canonical link: https://commits.webkit.org/151204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169221 268f45cc-cd09-0410-ab3c-d52691b4dbfc